Agregando nuevos avances de estilos y footer

--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -65,6 +65,10 @@
         designer.</p>
     </section>
 
+    <div class="project-media">
+      <img src="/images/screenshot.jpg" alt="Proyecto 1" />
+    </div>
+
     <section class="project-learnings">
       <h2>Outcomes & Learnings</h2>
       <p>I learned that working for yourself is not always easy, which is why I turned to the people around me for
@@ -72,11 +76,33 @@
         And above all, I’m proud to have built this portfolio from scratch.</p>
     </section>
 
-  </div>
-  </main>
+
+ <!--Footer-->
+  
+ <footer class="fade-element" id="footer">
+        <div class="footer-content">
+            <ul class="footer-nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+
+            <ul class="footer-social-links">
+                <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i class="fab fa-behance"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
+            </ul>
+
+            <div class="footer-copyright">
+                <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
+                <p>Designed & Developed by Malala Soifer.</p>
+            </div>
+        </div>
+    </footer>
 
 
-  <script src="/js/script.js"></script>
-</body>
+   <script src="./js/script.js"></script>
 
+  </body>
 </html>
