--- a/Proyectos/ux-ui/project-2-uxui.html
+++ b/Proyectos/ux-ui/project-2-uxui.html
@@ -118,7 +118,7 @@
         is essential for every project. It's important to adapt to each business, its timing, its team members, and
         above all, the deadlines.</p>
     </section>
-
+ </main>
   
 
    <script src="./js/script.js"></script>
