--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,7 @@
 
 </head>
 
+
 <body>
   <!-- Header -->
   <header class="fade-element">
@@ -53,7 +54,10 @@
       <div class="image-content">
         <img src="./images/MalalaSoifer38.jpg" alt="Your Profile Image" class="hero-image">
       </div>
-    </section>
+
+      </section>
+
+    
 
     <!-- About Section -->
     <section class="fade-element" id="about">
@@ -194,6 +198,17 @@
     </section>
   </main>
 
+  <!-- back to top -->
+ 
+   <div class="back-to-top-section">
+  <a href="#" class="back-to-top-link" aria-label="Back to top">
+    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+    <span class="back-to-top-text">Back to top</span>
+  </a>
+</div>
+
   <!--Footer-->
 
   <footer class="fade-element" id="footer">
@@ -218,6 +233,7 @@
     </div>
 </footer>
 
+</main>
 
   <script src="./js/script.js"></script>
 </body>
