Agregando modificaciones de back to top y back to portfolio

--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -7,7 +7,7 @@
   <title>Portfolio personal | Malala Soifer</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-  <!-- FIXED: Changed CSS path to be relative from subfolder -->
+  <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
   
   
@@ -34,10 +34,12 @@
 
   
   <!-- Back to Portfolio Link -->
-<div class="back-to-portfolio-container">
-  <a href="../../index.html" class="back-to-portfolio">
-    <i class="fas fa-arrow-left"></i>
-    Back to portfolio
+  <div class="back-to-portfolio-container fade-element">
+  <a href="../../index.html" class="back-to-portfolio-link" aria-label="Back to portfolio">
+    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-left-icon" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="15 18 9 12 15 6" />
+    </svg>
+    <span class="back-to-portfolio-text">Back to portfolio</span>
   </a>
 </div>
 
