Pagina de proyectos con av bar y footer y estilos apropiados hasta el project 4

--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -121,7 +121,16 @@
         And above all, I’m proud to have built this portfolio from scratch.</p>
     </section>
 
-  <!-- FIXED: Removed the extra </main> tag that was here -->
+ <!-- back to top -->
+ 
+   <div class="back-to-top-section">
+  <a href="#" class="back-to-top-link" aria-label="Back to top">
+    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+    <span class="back-to-top-text">Back to top</span>
+  </a>
+</div>
 
  
  <!-- Footer with proper structure -->
@@ -135,14 +144,8 @@
           <li><a href="../../Index.html#skills">Skills</a></li>
           <li><a href="../../Index.html#contact">Contact</a></li>
         </ul>
-            <!--<ul class="footer-nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>-->
-
-            <ul class="footer-social-links">
+            
+        <ul class="footer-social-links">
                 <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i class="fab fa-behance"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
@@ -159,7 +162,7 @@
 
    <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
-   <!--<script src="./js/script.js"></script>-->
+  
 
   </body>
 </html>
