--- a/Proyectos/ux-ui/project-2-uxui.html
+++ b/Proyectos/ux-ui/project-2-uxui.html
@@ -5,123 +5,194 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Integrity game</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <!-- CSS path to be relative from subfolder -->
+  <link rel="stylesheet" href="../../css/styles.css">
 
 </head>
 
 <body>
-  <div class="project-container">
-    <section class="project-header">
-      <h1 class="project-title">The Integrity game</h1>
 
-      <div class="project-brief">
-        <h2>Brief</h2>
-        <p> Web Redesign & Blog Revamp.<br>
-          <b>The Integrity Game (TIG)</b> is a unique platform where coaches offer services focused
-          on fostering personal and team growth in soft skills, alongside educational programs, licensing, and
-          individual coaching, among other services.
-          My role involved a comprehensive redesign of the entire website and blog to enhance its
-          usability, visual appeal, and engagement, with a strong emphasis on refining the user experience and front-end
-          presentation.
-        </p>
-
-        <div class="project-ficha">
-          <div><strong>Timeline:</strong> 4 months</div>
-          <div><strong>Service:</strong> UX/UI - web design </div>
-          <div><strong>Role:</strong> Principal Designer</div>
-          <div><strong>Tools:</strong> Figma, Funneltopia, Photoshop, Illustrator, Canva </div>
-        </div>
+  <!-- Header - Same as your main page -->
+  <header class="fade-element">
+    <nav class="navbar">
+      <div class="logo">
+        <a href="../../index.html">
+          <img src="../../images/LOGO NUEVO_semibold_gris.png" alt="Malala Soifer Logo">
+        </a>
       </div>
-    </section>
-  </div>
-
-  <div class="project-media">
-    <img src="/images/screenshot The integrity game.jpg" alt="Proyecto 2" />
-  </div>
-
-  <div>
-    <section class="project-contribution">
-      <h2>My Contribution</h2>
-      <ul class="fancy-list">
-        <li><i class="fas fa-check-circle icon-bullet"></i> Led a full UX/UI redesign of the website prioritizing
-          clarity, consistency, and accessibility.</li>
-        <li><i class="fas fa-check-circle icon-bullet"></i> Reorganized the information architecture to guide users
-          through the web and its resources more intuitively.</li>
-        <li><i class="fas fa-check-circle icon-bullet"></i> Created low and mid-fidelity mockups and prototypes using
-          Figma.</li>
-        <li><i class="fas fa-check-circle icon-bullet"></i> Collaborated on the front-end implementation, translating
-          designs into Funneltopia.</li>
-        <li><i class="fas fa-check-circle icon-bullet"></i> Enhanced the blog's readability with better typography,
-          visual hierarchy, and mobile-first design.</li>
+      <ul class="nav-links">
+        <li><a href="../../index.html#about">About</a></li>
+        <li><a href="../../index.html#projects">Projects</a></li>
+        <li><a href="../../index.html#skills">Skills</a></li>
+        <li><a href="../../index.html#contact">Contact</a></li>
       </ul>
-    </section>
-    </section>
+      <button id="profile-toggle" class="profile-toggle">Textile design</button>
+    </nav>
+  </header>
 
+  <!-- Back to Portfolio Link -->
+  <div class="back-to-portfolio-container fade-element">
+    <a href="../../index.html" class="back-to-portfolio-link" aria-label="Back to portfolio">
+      <svg xmlns="http://www.w3.org/2000/svg" class="arrow-left-icon" width="28" height="28" viewBox="0 0 24 24"
+        fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+        <polyline points="15 18 9 12 15 6" />
+      </svg>
+      <span class="back-to-portfolio-text">Back to portfolio</span>
+    </a>
+  </div>
 
-    <div>
-      <section class="project-challenge">
-        <h2>The Challenge</h2>
-        <p>The main objective was to balance educational content with playful aesthetics, ensuring a cohesive design
-          that clearly guided users through the platform's offerings. This involved meticulously aligning every design
-          decision with The Integrity Game's core values of integrity, transparency, and inclusivity, while maintaining
-          clear calls to action (CTAs) and coherent user journeys throughout the entire site to support the business's
-          overarching goals.</p>
+  <!-- Add main tag at the beginning -->
+  <main>
+
+    <div class="project-container">
+      <section class="project-header">
+        <h1 class="project-title">The Integrity game</h1>
+
+        <div class="project-brief">
+          <h2>Brief</h2>
+          <p> Web Redesign & Blog Revamp.<br>
+            <b>The Integrity Game (TIG)</b> is a unique platform where coaches offer services focused
+            on fostering personal and team growth in soft skills, alongside educational programs, licensing, and
+            individual coaching, among other services.
+            My role involved a comprehensive redesign of the entire website and blog to enhance its
+            usability, visual appeal, and engagement, with a strong emphasis on refining the user experience and
+            front-end
+            presentation.
+          </p>
+
+          <div class="project-ficha">
+            <div><strong>Timeline:</strong> 4 months</div>
+            <div><strong>Service:</strong> UX/UI - web design </div>
+            <div><strong>Role:</strong> Principal Designer</div>
+            <div><strong>Tools:</strong> Figma, Funneltopia, Photoshop, Illustrator, Canva </div>
+          </div>
+        </div>
       </section>
     </div>
 
-    <section class="project-process">
-      <h2>The Process</h2>
-      <p>The redesign of the entire website was a multi-stage process, meticulously executed to ensure the final product
-        met all objectives. It began with an in-depth <b>audit of the existing website</b> to identify areas for
-        improvement
-        and establish key challenges. This initial phase also included thorough competitor research and analysis to
-        understand market standards and opportunities.
-
-        Following this, the focus shifted to structural planning, involving the creation of <b>low and mid-fidelity
-          sketches and wireframes</b>, along with a detailed <b>sitemap and user flow development</b>. These steps were
-        crucial for
-        understanding and optimizing user navigation and the overall site architecture.
-
-        Our methodology was highly collaborative, centered around <b>weekly meetings</b> where progress was consistently
-        reviewed. These sessions included the business owner, the marketing team, copywriters, a podcast producer, and
-        other key team members. Each meeting served as a forum to present advancements, receive feedback on specific
-        areas, and collectively plan next steps, fostering a dynamic and transparent working environment.</p>
-    </section>
-
-    <section class="project-gallery">
-      <h2>Galería</h2>
-      <div class="gallery-grid">
-        <img src="/images/Screenshot Portfolio.jpg" alt="Imagen 1" />
-        <img src="/images/Screenshot Portfolio.jpg" alt="Imagen 2" />
-        <img src="/images/Screenshot Portfolio.jpg" alt="Imagen 3" />
-        <img src="/images/Screenshot Portfolio.jpg" alt="Imagen 4" />
-      </div>
-    </section>
-
-    <section class="project-result">
-      <h2>The Solution</h2>
-      <p>I found a way to combine my UX/UI knowledge with what I’ve been learning about front-end and web development.
-        The goal was simple: to build a clean and functional portfolio that could reflect both sides of me as a
-        designer.</p>
-    </section>
-
     <div class="project-media">
-      <img src="/images/screenshot.jpg" alt="Proyecto 1" />
+      <!-- FIXED: Updated image path to be relative -->
+      <img src="../../images/screenshot The integrity game.jpg" alt="Proyecto 1" />
     </div>
 
-    <section class="project-learnings">
-      <h2>Outcomes & Learnings</h2>
-      <p>I learned that it's incredibly satisfying to work when every team member is genuinely committed to doing their
-        part and collaborating with others, understanding that each role contributes to the business as a whole, and
-        that all of them are important and interconnected.
-        I also learned that in UX/UI, not every step is necessary for every business — or rather, not every deliverable
-        is essential for every project. It's important to adapt to each business, its timing, its team members, and
-        above all, the deadlines.</p>
-    </section>
- </main>
+    <div>
+      <section class="project-contribution">
+        <h2>My Contribution</h2>
+        <ul class="fancy-list">
+          <li></i> Led a full UX/UI redesign of the website prioritizing
+            clarity, consistency, and accessibility.</li>
+          <li></i> Reorganized the information architecture to guide users
+            through the web and its resources more intuitively.</li>
+          <li></i> Created low and mid-fidelity mockups and prototypes using
+            Figma.</li>
+          <li></i> Collaborated on the front-end implementation, translating
+            designs into Funneltopia.</li>
+          <li></i> Enhanced the blog's readability with better typography,
+            visual hierarchy, and mobile-first design.</li>
+        </ul>
+      </section>
+      </section>
+
+
+      <div>
+        <section class="project-challenge">
+          <h2>The Challenge</h2>
+          <p>The main objective was to balance educational content with playful aesthetics, ensuring a cohesive design
+            that clearly guided users through the platform's offerings. This involved meticulously aligning every design
+            decision with The Integrity Game's core values of integrity, transparency, and inclusivity, while
+            maintaining
+            clear calls to action (CTAs) and coherent user journeys throughout the entire site to support the business's
+            overarching goals.</p>
+        </section>
+      </div>
+
+      <section class="project-process">
+        <h2>The Process</h2>
+        <p>The redesign of the entire website was a multi-stage process, meticulously executed to ensure the final
+          product
+          met all objectives. It began with an in-depth <b>audit of the existing website</b> to identify areas for
+          improvement
+          and establish key challenges. This initial phase also included thorough competitor research and analysis to
+          understand market standards and opportunities.
+
+          Following this, the focus shifted to structural planning, involving the creation of <b>low and mid-fidelity
+          sketches and wireframes</b>, along with a detailed <b>sitemap and user flow development</b>. These steps
+          were crucial for understanding and optimizing user navigation and the overall site architecture.
+
+          Our methodology was highly collaborative, centered around <b>weekly meetings</b> where progress was
+          consistently reviewed. These sessions included the business owner, the marketing team, copywriters, a podcast producer, and
+          other key team members. Each meeting served as a forum to present advancements, receive feedback on specific
+          areas, and collectively plan next steps, fostering a dynamic and transparent working environment.</p>
+      </section>
+
+      <section class="project-gallery">
+        <h2>Galería</h2>
+        <div class="gallery-grid">
+          <!-- FIXED: Updated all image paths to be relative -->
+          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 1" />
+          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 2" />
+          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 3" />
+          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 4" />
+        </div>
+      </section>
+
+      <section class="project-result">
+        <h2>The Solution</h2>
+        <p>I found a way to combine my UX/UI knowledge with what I’ve been learning about front-end and web development.
+          The goal was simple: to build a clean and functional portfolio that could reflect both sides of me as a
+          designer.</p>
+      </section>
+
+      <div class="project-media">
+        <img src="../../images/screenshot The integrity game.jpg" alt="Proyecto 2" />
+      </div>
+
+      <section class="project-learnings">
+        <h2>Outcomes & Learnings</h2>
+        <p>I learned that it's incredibly satisfying to work when every team member is genuinely committed to doing
+          their
+          part and collaborating with others, understanding that each role contributes to the business as a whole, and
+          that all of them are important and interconnected.
+          I also learned that in UX/UI, not every step is necessary for every business — or rather, not every
+          deliverable
+          is essential for every project. It's important to adapt to each business, its timing, its team members, and
+          above all, the deadlines.</p>
+      </section>
+
+      <!-- Footer with proper structure -->
   
+ <footer class="fade-element" id="footer">
+        <div class="footer-content">
+           <!-- FIXED: Updated navigation links to go back to main page sections -->
+        <ul class="footer-nav-links">
+          <li><a href="../../Index.html#about">About</a></li>
+          <li><a href="../../Index.html#projects">Projects</a></li>
+          <li><a href="../../Index.html#skills">Skills</a></li>
+          <li><a href="../../Index.html#contact">Contact</a></li>
+        </ul>
+            
+        <ul class="footer-social-links">
+                <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i class="fab fa-behance"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
+            </ul>
 
-   <script src="./js/script.js"></script>
+            <div class="footer-copyright">
+                <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
+                <p>Designed & Developed by Malala Soifer.</p>
+            </div>
+        </div>
+    </footer>
 
-  </body>
+
+  </main>
+
+
+  <!-- FIXED: Updated script path to be relative -->
+  <script src="../../js/script.js"></script>
+
+</body>
+
 </html>
