--- a/Proyectos/ux-ui/project-4-uxui.html
+++ b/Proyectos/ux-ui/project-4-uxui.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Epicurean Escape</title>
-  <link rel="stylesheet" href="../styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
+
+  <!-- Lightbox2 CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
+   
 
 </head>
 
@@ -78,7 +81,7 @@
       <img src="../../images/thumbnail.jpg" alt="Proyecto 4" />
     </div>
 
-       <div>
+       <div> 
       <section class="project-challenge">
       <h2>The Challenge</h2>
       <p>Explain the problem you were trying to solve or the opportunity you identified.
@@ -120,6 +123,32 @@
         learn from the process? What would you do differently next time?</p>
       </section>
 
+
+<!--Previous project| back to top | Next project-->
+ 
+   <div class="project-navigation-section elegant-clean">
+  <a href="/Proyectos/ux-ui/project-3-uxui.html" class="nav-link">
+    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-left" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+    <span class="nav-text">Previous projects</span>
+  </a>
+
+  <a href="#" class="back-to-top-link" aria-label="Volver arriba">
+    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+    <span class="back-to-top-text">Back to top</span>
+  </a>
+
+  <a href="/Proyectos/ux-ui/project-5-uxui.html" class="nav-link">
+    <span class="nav-text">Next project </span>
+    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-right" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="18 15 12 9 6 15"></polyline>
+    </svg>
+  </a>
+</div>
+
     <!-- Footer with proper structure -->
   
  <footer class="fade-element" id="footer">
@@ -151,6 +180,11 @@
 
   <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
+
+  <!-- Lightbox2 JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
+
 
 </body>
 
