--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  
+
 
 </head>
 
@@ -28,7 +30,7 @@
   <header class="fade-element">
     <nav class="navbar">
       <div class="logo">
-      <a href="/"> <img src="/images/LOGO NUEVO_semibold_gris.png" alt="Malala Soifer Logo"> </a>
+        <a href="/"> <img src="/images/LOGO NUEVO_semibold_gris.png" alt="Malala Soifer Logo"> </a>
       </div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -36,7 +38,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <button id="profile-toggle" class="profile-toggle">Textile design</button>
+      <button id="profile-toggle" class="profile-toggle">Switch to Textile design</button>
 
     </nav>
   </header>
@@ -48,25 +50,31 @@
     <section id="hero" class="fade-element">
       <div class="hero-content">
         <h1 class="hero-title">MALALA SOIFER</h1>
-        <p class="hero-description" id="hero-description">Explorá mi mundo entre lo digital y lo textil. UX/UI,
-          ilustración, patrones y más.</p>
+        <p class="hero-description" id="hero-description">Explore my world between digital and textile. UX/UI, illustration, patterns, and more.</p>
       </div>
       <div class="image-content">
         <img src="./images/MalalaSoifer38.jpg" alt="Your Profile Image" class="hero-image">
       </div>
 
-      </section>
+    </section>
 
-    
+
 
     <!-- About Section -->
     <section class="fade-element" id="about">
       <h2>About Me</h2>
-      <p id="about-text">Hi! I’m a UX/UI designer with over 10 years of experience in graphic design, with a
-        specialization in the textile industry. Throughout my career, I’ve developed collections, prints, physical and
-        digital catalogs, and visual assets for products. This background gave me a strong foundation in aesthetics,
-        attention to detail, and cross-functional collaboration.<br> I’m currently training in frontend development (HTML,
-        CSS, JavaScript), with a growing interest in digital products and eCommerce.</p>
+      <p id="about-text">Hi! I'm Malala — a designer with over 15 years of experience in textile graphic design and a
+        background in Fine Arts. I bring a strong aesthetic sensibility, a critical eye for detail, and a deep
+        understanding of visual composition.
+
+        Driven by curiosity and a desire to solve real-world problems, I’ve transitioned into UX/UI design and Front-End
+        development—applying my creative vision to digital experiences that are both intuitive and visually engaging.
+
+        <br><br>I’m currently working as a UX/UI & Front-End Intern at The Integrity Game, where I also contribute to graphic
+        design. I'm continuously learning and building with HTML, CSS, JavaScript, and React.
+
+        I’m especially passionate about projects in eCommerce and Retail—crafting user-centered, strategic solutions for
+        digital catalogs and shopping experiences that connect people to products in meaningful ways.</p>
     </section>
 
     <!-- Projects Section -->
@@ -115,9 +123,9 @@
         </div>
 
         <div class="project-card uxui-project fade-element">
-          <a href="/Proyectos/ux-ui/project-6-uxui.html"></a>
-          <img src="ruta/al/proyecto-uxui.jpg" alt="UX/UI Project" class="project-image">
-          <h3 class="project-title">Proyectos front end</h3>
+          <a href="/Proyectos/ux-ui/project-6-uxui.html">
+            <img src="./images/5.jpg" alt="UX/UI Project" class="project-image">
+            <h3 class="project-title">Graphic Design projects</h3>
           </a>
         </div>
 
@@ -170,24 +178,26 @@
 
     <!-- Skills Section -->
     <section class="fade-element" id="skills">
-  <h2>Skills</h2>
-  <ul id="skills-list">
-    <li>UX/UI Design (Figma, FigJam, Miro, Research, Prototyping)</li>
-    <li>Frontend Development (HTML, CSS, JavaScript Basics, Learning React)</li>
-    <li>Responsive Design</li>
-    <li>Textile & Graphic Design (Adobe Photoshop, Illustrator, InDesign, Canva)</li>
-    <li>Emerging Technologies (Generative AI)</li>
-    <li>Marketing Tools (Funneltopia)</li>
-  </ul>
-</section>
+      <h2>Skills</h2>
+      <ul id="skills-list">
+        <li>UX/UI Design (Figma, FigJam, Miro, Research, Prototyping)</li>
+        <li>Frontend Development (HTML, CSS, JavaScript Basics, Learning React,Github)</li>
+        <li>Responsive Design</li>
+        <li>Textile & Graphic Design (Adobe Photoshop, Illustrator, InDesign, Canva)</li>
+        <li>Emerging Technologies (Generative AI)</li>
+        <li>Marketing Tools (Funneltopia)</li>
+      </ul>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="fade-element">
       <h2>Let's connect!</h2>
       <p>Have a project in mind or want to know more?<a href="mailto:tuemail@email.com">malalasoifer@gmail.com</a>
       </p>
-      <p>Or follow me on <a href="https://www.behance.net/malalasoifer" target="_blank">Behance</a> | 
-        <a href="https://www.linkedin.com/in/malalasoifer/" target="_blank">LinkedIn</a></p>
+      <p>Or follow me on <a href="https://www.behance.net/malalasoifer" target="_blank">Behance</a> |
+        <a href="https://www.linkedin.com/in/malalasoifer/" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/MaliSoi" target="_blank">GitHub</a>
+      </p>
 
       <form id="contact-form">
         <input type="text" placeholder="Your Name" required>
@@ -199,43 +209,51 @@
   </main>
 
   <!-- back to top -->
- 
-   <div class="back-to-top-section">
-  <a href="#" class="back-to-top-link" aria-label="Back to top">
-    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-    <span class="back-to-top-text">Back to top</span>
-  </a>
-</div>
+
+  <div class="back-to-top-section">
+    <a href="#" class="back-to-top-link" aria-label="Volver arriba">
+      <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none"
+        stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+        <polyline points="18 15 12 9 6 15"></polyline>
+      </svg>
+      <span class="back-to-top-text">Back to top</span>
+    </a>
+  </div>
 
   <!--Footer-->
 
   <footer class="fade-element" id="footer">
     <div class="footer-content">
-        <ul class="footer-nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+      <ul class="footer-nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
 
-        <ul class="footer-social-links">
-            <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i class="fab fa-behance"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
-        </ul>
+      <ul class="footer-social-links">
+        <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i
+              class="fab fa-behance"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i
+              class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="https://github.com/MaliSoi" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        </li>
+        <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
+      </ul>
 
-        <div class="footer-copyright">
-            <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
-            <p>Designed & Developed by Malala Soifer.</p>
-        </div>
+      <div class="footer-copyright">
+        <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
+        <p>Designed & Developed by Malala Soifer.</p>
+      </div>
     </div>
-</footer>
+  </footer>
 
-</main>
+  </main>
 
   <script src="./js/script.js"></script>
+
+  
+
 </body>
 
 </html>
