Agregando imagenes nuevas al proyecto 1 ux/ui y video

--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -66,8 +66,11 @@
     </div>
 
     <div class="project-media">
-    <img src="../../images/screenshot.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1"/>
-    </div>
+  <video autoplay muted loop playsinline class="project-video">
+    <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
+    Tu navegador no soporta video HTML5.
+  </video>
+</div>
 
 
    
