--- a/Index.html
+++ b/Index.html
@@ -86,43 +86,43 @@
 
         <!-- UX/UI Projects -->
 
-        <div class="project-card uxui-project fade-element">
+        <div class="project-card uxui-project card-1 fade-element">
           <a href="/Proyectos/ux-ui/project-1-uxui.html">
-            <img src="./images/Screenshot Portfolio.jpg" alt="UX/UI Project" class="project-image">
+            <img src="./images/Mockup_Portfolio.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Portfolio Malala Soifer</h3>
           </a>
         </div>
 
 
-        <div class="project-card uxui-project fade-element">
+        <div class="project-card uxui-project card-2 fade-element">
           <a href="/Proyectos/ux-ui/project-2-uxui.html">
             <img src="./images/Screenshot_TIG.jpg" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">The integrity game </h3>
           </a>
         </div>
 
-        <div class="project-card uxui-project fade-element">
+        <div class="project-card uxui-project card-3 fade-element">
           <a href="/Proyectos/ux-ui/project-3-uxui.html">
             <img src="./images/Thumbnail.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Epicurean Escape</h3>
           </a>
         </div>
 
-        <div class="project-card uxui-project fade-element">
+        <div class="project-card uxui-project card-4 fade-element">
           <a href="/Proyectos/ux-ui/project-4-uxui.html">
             <img src="./images/thumbnail.jpg" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Architecture Website Design</h3>
           </a>
         </div>
 
-        <div class="project-card uxui-project fade-element">
+        <div class="project-card uxui-project card-5 fade-element">
           <a href="/Proyectos/ux-ui/project-5-uxui.html">
             <img src="./images/5.jpg" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Swap Now</h3>
           </a>
         </div>
 
-        <div class="project-card uxui-project fade-element">
+        <div class="project-card uxui-project card-6 fade-element">
           <a href="/Proyectos/ux-ui/project-6-uxui.html">
             <img src="./images/5.jpg" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Graphic Design projects</h3>
@@ -131,37 +131,37 @@
 
         <!-- Textile Projects -->
 
-        <div class="project-card textile-project fade-element">
+        <div class="project-card textile-project card-1 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
 
-        <div class="project-card textile-project fade-element">
+        <div class="project-card textile-project card-2 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
 
-        <div class="project-card textile-project fade-element">
+        <div class="project-card textile-project card-3 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
 
-        <div class="project-card textile-project fade-element">
+        <div class="project-card textile-project card-3 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
 
-        <div class="project-card textile-project fade-element">
+        <div class="project-card textile-project card-4 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
 
-        <div class="project-card textile-project fade-element">
+        <div class="project-card textile-project card-5 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
 
-        <div class="project-card textile-project fade-element">
+        <div class="project-card textile-project card-6 fade-element">
           <img src="ruta/al/proyecto-textil.jpg" alt="Textile Project" class="project-image">
           <h3 class="project-title">Colección Floral - Textil</h3>
         </div>
