--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -68,7 +68,7 @@
     <div class="project-media">
   <video autoplay muted loop playsinline class="project-video">
     <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
-    Tu navegador no soporta video HTML5.
+     <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
   </video>
 </div>
 
@@ -151,7 +151,8 @@
   </a>
 </div>
 
- 
+</main>
+
  <!-- Footer with proper structure -->
   
  <footer class="fade-element" id="footer">
@@ -176,8 +177,6 @@
             </div>
         </div>
     </footer>
-
-</main>
 
    <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
