--- a/Proyectos/ux-ui/project-2-uxui.html
+++ b/Proyectos/ux-ui/project-2-uxui.html
@@ -9,10 +9,7 @@
 
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
-
-  <!-- Lightbox2 CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
-
+  
 </head>
 
 <body>
@@ -75,10 +72,14 @@
       </section>
     </div>
 
-    <div class="project-media">
-      <!-- FIXED: Updated image path to be relative -->
-      <img src="../../images/screenshot The integrity game.jpg" alt="Proyecto 1" />
-    </div>
+    <!--
+<div class="project-media">
+  <video autoplay muted loop playsinline class="project-video">
+    <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
+    <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
+  </video>
+</div>
+-->
 
     <div>
       <section class="project-contribution">
@@ -131,14 +132,21 @@
       </section>
 
       <section class="project-gallery">
-        <h2>Galería</h2>
-        <div class="gallery-grid">
-          <!-- FIXED: Updated all image paths to be relative -->
-          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 1" />
-          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 2" />
-          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 3" />
-          <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 4" />
+      <h2>Galería</h2>
+      <div class="gallery-grid">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
+        <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 1" />
         </div>
+       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
+       <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 2" />
+       </div>
+       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
+       <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 3" />
+       </div>
+       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
+       <img src="../../images/screenshot The integrity game.jpg" alt="Imagen 4" />
+       </div>      
+      </div>
       </section>
 
       <section class="project-result">
@@ -149,8 +157,9 @@
       </section>
 
       <div class="project-media">
-        <img src="../../images/screenshot The integrity game.jpg" alt="Proyecto 2" />
-      </div>
+    <div class="project-media">
+        <img src="../../images/screenshot The integrity game.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
+    </div>
 
       <section class="project-learnings">
         <h2>Outcomes & Learnings</h2>
@@ -189,7 +198,9 @@
   </a>
 </div>
 
-      <!-- Footer with proper structure -->
+  </main>
+
+   <!-- Footer with proper structure -->
   
  <footer class="fade-element" id="footer">
         <div class="footer-content">
@@ -215,14 +226,22 @@
     </footer>
 
 
-  </main>
-
-
   <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
 
-  <!-- Lightbox2 JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+ <!-- Lightbox -->
+  <div id="customLightbox" class="custom-lightbox">
+    <div class="lightbox-content">
+        <button class="lightbox-close" aria-label="Cerrar imagen expandida">
+    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
+        <line x1="18" y1="6" x2="6" y2="18"></line>
+        <line x1="6" y1="6" x2="18" y2="18"></line>
+    </svg>
+</button>
+        <img src="" alt="Expanded Image" class="lightbox-image">
+        <div class="lightbox-title"></div>
+    </div>
+</div>
 
 
 </body>
