--- a/Proyectos/ux-ui/project-6-uxui.html
+++ b/Proyectos/ux-ui/project-6-uxui.html
@@ -10,10 +10,7 @@
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
 
-  <!-- Lightbox2 CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet" />
-
-
+  
 </head>
 
 <body>
@@ -69,12 +66,14 @@
       </section>
     </div>
 
-    <div class="project-media">
-      <!-- FIXED: Updated image path to be relative -->
-      <img src="../../images/screenshot.jpg" alt="Proyecto 6" />
-      <!--<img src="/images/screenshot.jpg" alt="Proyecto 1" />-->
-    </div>
-
+    <!--
+<div class="project-media">
+  <video autoplay muted loop playsinline class="project-video">
+    <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
+    <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
+  </video>
+</div>
+-->
 
     <section class="project-challenge">
       <h2>The Challenge</h2>
@@ -94,14 +93,20 @@
     <section class="project-gallery">
       <h2>Galería</h2>
       <div class="gallery-grid">
-        <!-- FIXED: Updated all image paths to be relative -->
-        <img src="../../images/thumbnail.jpg" alt="Imagen 1" />
-        <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 2" />
-        <img src="../../images/Thumbnail.png" alt="Imagen 3" />
-        <img src="../../images/Screenshot_TIG.jpg" alt="Imagen 4" />
-
+        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
+        <img src="../../images/SwapNow.png" alt="Imagen 1" />
+        </div>
+       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
+       <img src="../../images/SwapNow.png" alt="Imagen 2" />
+       </div>
+       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
+       <img src="../../images/SwapNow.png" alt="Imagen 3" />
+       </div>
+       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
+       <img src="../../images/SwapNow.png" alt="Imagen 4" />
+       </div>      
       </div>
-    </section>
+      </section>
 
     <section class="project-result">
       <h2>The Solution</h2>
@@ -111,9 +116,8 @@
     </section>
 
     <div class="project-media">
-      <!-- FIXED: Updated image path to be relative -->
-      <img src="../../images/screenshot.jpg" alt="Proyecto 1" />
-      <!--<img src="/images/screenshot.jpg" alt="Proyecto 1" />-->
+    <div class="project-media">
+        <img src="../../images/SwapNow.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
     </div>
 
     <section class="project-learnings">
@@ -151,7 +155,9 @@
       </a>
     </div>
 
-    <!-- Footer with proper structure -->
+      </main>
+
+      <!-- Footer with proper structure -->
 
     <footer class="fade-element" id="footer">
       <div class="footer-content">
@@ -178,13 +184,23 @@
       </div>
     </footer>
 
-  </main>
-
   <!-- FIXED: Updated script path to be relative -->
   <script src="../../js/script.js"></script>
 
-  <!-- Lightbox2 JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+ <!-- Lightbox -->
+  <div id="customLightbox" class="custom-lightbox">
+    <div class="lightbox-content">
+        <button class="lightbox-close" aria-label="Cerrar imagen expandida">
+    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
+        <line x1="18" y1="6" x2="6" y2="18"></line>
+        <line x1="6" y1="6" x2="18" y2="18"></line>
+    </svg>
+</button>
+        <img src="" alt="Expanded Image" class="lightbox-image">
+        <div class="lightbox-title"></div>
+    </div>
+</div>
+
 
 
 </body>
